--- a/FY/Makefile
+++ b/FY/Makefile
@@ -44,7 +44,7 @@ HASNATDYNLINK     := $(COQMF_HASNATDYNLINK)
 OCAMLWARN         := $(COQMF_WARN)
 
 Makefile.conf: _CoqProject
-	coq_makefile -f _CoqProject Assertion.v Complex.v Examples.v HoareLogic.v Logic.v Map.v Matrix.v Quantum.v Real.v Semantics.v State.v Syntax.v -o Makefile
+	coq_makefile -f _CoqProject Assertion.v Examples.v Logic.v Semantics.v State.v Syntax.v Utils.v -o Makefile
 
 # This file can be created by the user to hook into double colon rules or
 # add any other Makefile code he may need
